--- a/string/index.html
+++ b/string/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-
+    <meta property="og:url" content="https://lemniscatern.github.io/minigames/string/" />
     <meta property="og:site_name" content="String(ストリング)　~オンラインを楽しむ~" />
     <meta property="og:description" content="推奨人数:3人以上　1プレイ時間:10分程度" />
     <meta property="og:type" content="website"/>
