--- a/string/index.html
+++ b/string/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta property="og:url" content="https://lemniscatern.github.io/minigames/string/" />
-    <meta property="og:site_name" content="String(ストリング)　~オンラインを楽しむ~" />
+    <meta property="og:site_name" content="String(ストリング)　~オンラインで楽しむゲーム~" />
     <meta property="og:description" content="推奨人数:3人以上　1プレイ時間:10分程度" />
     <meta property="og:type" content="website"/>
     <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="String(ストリング)　~オンラインで楽しむゲーム~" />
+    <meta name="twitter:description" content="推奨人数:3人以上　1プレイ時間:10分程度"/>
+
 
     <script type="text/javascript" src="adno.js"></script>
     <script type="text/javascript" src="topic.js"></script>
