--- a/string/index.html
+++ b/string/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
-  <head>
+  <head lang="jp" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
     <meta charset="utf-8">
     <meta property="og:url" content="https://lemniscatern.github.io/minigames/string/" />
     <meta property="og:site_name" content="String(ストリング)　~オンラインで楽しむゲーム~" />
