--- a/string/index.html
+++ b/string/index.html
@@ -5,9 +5,11 @@
     <meta property="og:url" content="https://lemniscatern.github.io/minigames/string/" />
     <meta property="og:site_name" content="String(ストリング)　~オンラインで楽しむゲーム~" />
     <meta property="og:description" content="推奨人数:3人以上　1プレイ時間:10分程度" />
+    <meta property="og:title" content="String(ストリング)　~オンラインで楽しむゲーム~" />
     <meta property="og:type" content="website"/>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="String(ストリング)　~オンラインで楽しむゲーム~" />
+    <meta property="og:image" content="#" />
     <meta name="twitter:description" content="推奨人数:3人以上　1プレイ時間:10分程度"/>
 
 
