--- a/mackerel/index.html
+++ b/mackerel/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta property="og:site_name" content="Mackerel"/>
-        <meta property="og:description" content="いつまでも若くありあたい貴方へ。" />
-        <meta property="og:image" contenmkdirt="" />
+        <meta property="og:description" content="年齢に関するお悩みをMackerel仙人が一刀両断してくださいます" />
+        <meta property="og:image" contenmkdirt="https://lemniscatern.github.io/minigames/mackerel/img/hermit-icon.png" />
         <meta property="og:type" content="website"/>
         <meta name="twitter:card" content="summary" />
 
