--- a/mackerel/index.html
+++ b/mackerel/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
+    <head lang="jp" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
         <meta charset="utf-8">
         <meta property="og:site_name" content="Mackerel"/>
         <meta property="og:description" content="年齢に関するお悩みをMackerel仙人が一刀両断してくださいます" />
