--- a/mackerel/index.html
+++ b/mackerel/index.html
@@ -2,7 +2,8 @@
 <html lang="ja">
     <head lang="jp" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
         <meta charset="utf-8">
-        <meta property="og:site_name" content="Mackerel"/>
+        <meta property="og:site_name" content="Mackerel（マカレル）"/>
+        <meta property="og:title" content="Mackerel（マカレル）"/>
         <meta property="og:description" content="年齢に関するお悩みをMackerel仙人が一刀両断してくださいます" />
         <meta property="og:image" contenmkdirt="https://lemniscatern.github.io/minigames/mackerel/img/hermit-icon.png" />
         <meta property="og:type" content="website"/>
