--- a/mackerel/index.html
+++ b/mackerel/index.html
@@ -5,7 +5,7 @@
         <meta property="og:site_name" content="Mackerel（マカレル）"/>
         <meta property="og:title" content="Mackerel（マカレル）"/>
         <meta property="og:description" content="年齢に関するお悩みをMackerel仙人が一刀両断してくださいます" />
-        <meta property="og:image" contenmkdirt="https://lemniscatern.github.io/minigames/mackerel/img/hermit-icon.png" />
+        <meta property="og:image" content="https://lemniscatern.github.io/minigames/mackerel/img/hermit-icon.png" />
         <meta property="og:type" content="website"/>
         <meta name="twitter:card" content="summary" />
 
