--- a/mackerel/index.html
+++ b/mackerel/index.html
@@ -32,8 +32,8 @@
                         <p class="mt">私は世界の<ruby> <rb>釁隙</rb> <rp>(</rp> <rt>きんげき</rt><rp>)</rp></ruby>を生きる<ruby><rb>僊</rb><rp>(</rp><rt>せんにん</rt><rp>)</rp></ruby>である。</p>
                         <p>そなたの様相からは隠すことの出来ない憂を見てとれる。</p>
                         <p>ふむふむ。自身の年齢について悩みがあると。</p>
-                        <p>そなたは<textarea  id="year_birth" class="my-textarea" cols="4" rows="1" placeholder="2000"></textarea>年<textarea  id="month_birth" class="my-textarea" cols="2" rows="1" placeholder="1"></textarea>月生まれだが、</p>
-                        <p>いつまでも<textarea  id="ideal_age" class="my-textarea" placeholder="16" cols="3" rows="1"></textarea>歳でありたい、と。</p>
+                        <p>そなたは<textarea  id="year_birth" class="my-textarea" cols="4" rows="1" >2000</textarea>年<textarea  id="month_birth" class="my-textarea" cols="2" rows="1">6</textarea>月生まれだが、</p>
+                        <p>いつまでも<textarea  id="ideal_age" class="my-textarea" cols="3" rows="1">10</textarea>歳でありたい、と。</p>
                         <div class="text-center">
                             <button class="" id="yes" style="border-style:outset; border-radius: 3px;" onclick="yesbutton()">はい</button>
                         </div>
